Finally fixed images autoresizing (all desktop, who knows what's going on mobile. Also added some jQuery prettiness

--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,4 @@
-p {color:#f7f0f0; font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;}
+p {color:#f7f0f0; font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
 b {color:#650042; font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;}
 h1 {text-decoration:bold; color:#d6008c; font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;; }
 h2 {color:#650042; font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;; }
@@ -31,6 +31,10 @@ html{
    height: auto;
    padding-left: 2%;
    padding-right: 2%;
+   font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300;
+   line-height: 1.5;
+   text-align: justify;
 }
 
 table, th, td {
